tests/classes/errors/undef_field.bl
class A {
    var foo: Int;
}

var a: A = A(5);

print(a.bar);
